--- a/style.css
+++ b/style.css
@@ -1,21 +1,89 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
-:root{  
-     --cor-de-fundo: #0075FF;
-     --verde: #9E00FF;
+:root{
+    --cor-de-fundo: #000000;
+    --verde: #5b0b76;
     --branco: #FFFFFF;
-    --botaoativo: #52FF00;
-    --botaoinativo: #FF013E;
-    --texto-fundo: #040404;
+    --botao-ativo: #8a8a8a;
+    --botao-inativo: #d93c3c;
+    --texto-fundo: #0088e9;
+}
 
- body{ 
-    background-color: var (--cor-de-fundo);
-    color: var(branco)
-    font-family;
+body{
+    background-color: var(--cor-de-fundo);
+    color: var(--branco);
+    font-family: "chakra Petch", sans-serif;
+}
+
+.conteudo-principal{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    max-width: 1240px;
+    width: 100%;
+    margin: 0;
+}
+
+.titulo-principal{
+    text-align: left;
+    width: 100%;
+    font-size: 32px;
+}
+
+.titulo-principal span{
+    color:darkorchid;
+}
+
+.botao{
+    font-family: "Chakra Petch", sans-serif;
+    background-color: var(--botao-inativo);
+    color: var(--branco);
+    display: flex;
+    justify-content: center;
+    padding: 1em;
+    font-size: 18px;
+    align-items: center;
+    width: 100%;
+    border-bottom: 4px solid var(--botao-ativo);
+    border-left: 2px solid var(--botao-ativo);
+    border-right: 2px solid var(--botao-ativo);
+    border-top: none;
+}
+
+.botoes{
+    display: block;
+}
+
+.botao:first-child{
+    border-radius: 40px 40px 0 0;
+}
+
+.ativo{
+    background-color: var(--botao-ativo);
+    border-bottom: 4px solid var(--verde);
+
+    
 }
 
 
+
+
+@media screen and (min-width: 768px){
+    .botoes{
+        display: flex;
+    }
+    .botao:first-child{
+        border-radius: 40px 0 0 0;
+    }
+    .botao:last-child{
+        border-radius: 0 40px 0 0;
+    }  
 }
+
+
+
+
 
 
 
