--- a/style.css
+++ b/style.css
@@ -87,6 +87,12 @@ font-family: "chakra Petch", sans-serif;
     text-transform: uppercase;
 }
 
+   .contador{
+        font-size: 20px; 
+        text-align: center;
+
+   }
+
  @media screen and (min-width: 768px){
     .botoes{
         display: flex;
