--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 :root{
-    --cor-de-fundo: #000000;
-    --verde: #48ff00;
-    --branco: #00328f;
-    --botao-ativo: #00ffea;
-    --botao-inativo: #ffa600;
-    --texto-fundo: #5f55d2;
+    --cor-de-fundo:  #353535;
+    --azul:#ffffff;
+    --branco:#000000;
+    --botao-ativo:#b0b0b0;
+    --botao-inativo:#ffffff;
+    --texto-fundo:#636363;
 }
 
 body{
-background-color: var(--cor-de-fundo);
-color: var(--branco);
-font-family: "chakra Petch", sans-serif;
+    background-color: var(--cor-de-fundo);
+    color: var(--azul);
+    font-family: "chakra Petch", sans-serif;
 }
-
+    
 .conteudo-principal{
     display: flex;
     flex-direction: column;
@@ -24,17 +24,16 @@ font-family: "chakra Petch", sans-serif;
     width: 100%;
     margin: 0;
 }
-
+    
 .titulo-principal{
     text-align: left;
     width: 100%;
     font-size: 32px;
 }
-
+    
 .titulo-principal span{
-        color: var(--botao-ativo)
+    color: var(--botao-ativo)
 }
-
 .botao{
     font-family: "Chakra Petch", sans-serif;
     background-color: var(--botao-inativo);
@@ -50,20 +49,20 @@ font-family: "chakra Petch", sans-serif;
     border-right: 2px solid var(--botao-ativo);
     border-top: none;
 }
-
+    
 .botoes{
     display: block;
 }
-
+    
 .botao:first-child{
     border-radius: 40px 40px 0 0;
 }
-
+    
 .botao.ativo{
     background-color: var(--botao-ativo);
     border-bottom: 4px solid var(--botao-inativo);
 }
-
+    
 .abas-textos{
     background-color: var(--texto-fundo);
     padding: 40px;
@@ -72,36 +71,50 @@ font-family: "chakra Petch", sans-serif;
 .aba-conteudo.ativo{
     display:block;
 }
-
+    
 .aba-conteudo{
     display: none;
 }
-
+    
 .aba-conteudo-titulo-principal{
     font-size: 28px;
     text-align: center;
 }
 .aba-conteudo-titulo-secundario{
     text-align: center;
-    color: var(--branco);
+    color: var(--azul);
     text-transform: uppercase;
 }
+ 
+.contador{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.contador-digito{
+    padding: 0 16px;
+    text-align: center;
+    min-width: 100px;
+}
+.contador-digito-numero{
+ font-size: 80px;  
+ margin: 0;  
+}
+.contador-digito-texto{
+    color: var(--azul);
+}
 
-   .contador{
-        font-size: 20px; 
-        text-align: center;
 
-   }
 
- @media screen and (min-width: 768px){
+@media screen and (min-width: 768px){
     .botoes{
-        display: flex;
+    display: flex;
     }
     .botao:first-child {
-        border-radius: 40px  0 0 0;
+    border-radius: 40px 0 0 0;
     }
     .botao:last-child{
-        border-radius: 0 40px 0 0;
+    border-radius: 0 40px 0 0;
     }
-    
- }
+
+}
