--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap&#39;');
 
-:root{
-    --cor-de-fundo:  #353535;
-    --azul:#ffffff;
-    --branco:#000000;
-    --botao-ativo:#b0b0b0;
-    --botao-inativo:#ffffff;
-    --texto-fundo:#636363;
+:root {
+    --cor-de-fundo: #1E1E1E;
+    --verde: #6FFF57;
+    --branco: #FFFFFF;
+    --botao-ativo: #133bdb;
+    --botao-inativo: #e44e4e;
+    --texto-fundo: #20013d;
 }
 
-body{
+body {
     background-color: var(--cor-de-fundo);
-    color: var(--azul);
+    color: var(--branco);
     font-family: "chakra Petch", sans-serif;
 }
-    
-.conteudo-principal{
+
+.conteudo-principal {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -24,17 +24,18 @@ body{
     width: 100%;
     margin: 0;
 }
-    
-.titulo-principal{
+
+.titulo-principal {
     text-align: left;
     width: 100%;
     font-size: 32px;
 }
-    
-.titulo-principal span{
+
+.titulo-principal span {
     color: var(--botao-ativo)
 }
-.botao{
+
+.botao {
     font-family: "Chakra Petch", sans-serif;
     background-color: var(--botao-inativo);
     color: var(--branco);
@@ -49,72 +50,83 @@ body{
     border-right: 2px solid var(--botao-ativo);
     border-top: none;
 }
-    
-.botoes{
+
+.botoes {
     display: block;
 }
-    
-.botao:first-child{
+
+.botao:first-child {
     border-radius: 40px 40px 0 0;
 }
-    
-.botao.ativo{
+
+.botao.ativo {
     background-color: var(--botao-ativo);
     border-bottom: 4px solid var(--botao-inativo);
 }
-    
-.abas-textos{
+
+.abas-textos {
     background-color: var(--texto-fundo);
     padding: 40px;
     border-radius: 0 0 40px 40px;
 }
-.aba-conteudo.ativo{
-    display:block;
+
+.aba-conteudo.ativo {
+    display: block;
 }
-    
-.aba-conteudo{
+
+.aba-conteudo {
     display: none;
 }
-    
-.aba-conteudo-titulo-principal{
+
+.aba-conteudo-titulo-principal {
     font-size: 28px;
     text-align: center;
 }
-.aba-conteudo-titulo-secundario{
+
+.aba-conteudo-titulo-secundario {
     text-align: center;
-    color: var(--azul);
+    color: var(--branco);
     text-transform: uppercase;
 }
- 
-.contador{
+
+.contador {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
-.contador-digito{
+
+.contador-digito {
     padding: 0 16px;
     text-align: center;
     min-width: 100px;
 }
-.contador-digito-numero{
- font-size: 80px;  
- margin: 0;  
-}
-.contador-digito-texto{
-    color: var(--azul);
+
+.contador-digito-numero {
+    font-size: 80px;
+    margin: 0;
 }
 
+.contador-digito-texto {
+    color: var(--botao-ativo);
+    font-size: 20px;
+    margin: 0;
+}
 
 
-@media screen and (min-width: 768px){
-    .botoes{
-    display: flex;
+
+
+
+@media screen and (min-width: 768px) {
+    .botoes {
+        display: flex;
     }
+
     .botao:first-child {
-    border-radius: 40px 0 0 0;
+        border-radius: 40px 0 0 0;
     }
-    .botao:last-child{
-    border-radius: 0 40px 0 0;
+
+    .botao:last-child {
+        border-radius: 0 40px 0 0;
     }
 
 }
